# nfc-scanner-firmware

./: .releaserc.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  semantic-release-build.sh
.cargo/: config.toml
.github/workflows/: ci.yml  pull-request.yml
src/: main.rs
