[package]
name = "bloop-nfc-scanner"
description = "Bloop NFC Scanner Firmware"
version = "1.1.1"
authors = ["Ben Scholzen (DASPRiD) <mail@dasprids.de>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"

defmt = "=0.3.2"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "pio", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
mfrc522 = "0.5.0"
usbd-hid = "0.6.1"
hex = { version = "0.4", default-features = false }

[profile.release]
debug = true
